--- a/layouts/partials/popularCard.html
+++ b/layouts/partials/popularCard.html
@@ -1,15 +1,14 @@
 {{ $page := .Page }}
 {{ $views := .Views }}
-<article class="post-item popular-card">
+<article class="post-item">
     <h4 class="post-item-title">
         <a href="{{ $page.RelPermalink }}">{{ $page.Title }}</a>
     </h4>
-    {{ if $page.Params.isStarred }}
     <div class="post-item-right">
+        <!-- <span class="popular-posts__views">조회수 {{ $views }}</span> -->
+        <span class="post-item-meta">조회수 {{ $views }}</span>
+        {{ if $page.Params.isStarred }}
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor" class="icon-star"><path d="M16 23.027L24.24 28l-2.187-9.373 7.28-6.307-9.587-.827-3.747-8.827-3.747 8.827-9.587.827 7.267 6.307L7.759 28l8.24-4.973z"></path></svg>
-    </div>
-    {{ end }}
-    <div class="post-item-meta popular-card__meta">
-        <span class="popular-posts__views">조회수 {{ $views }}</span>
+        {{ end }}
     </div>
 </article>
