--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -220,17 +220,22 @@ body[data-theme="dark"] .search-result__meta {
 
 @media (max-width: 768px) {
   .navbar-search {
-    padding-top: 1.2rem;
-    justify-content: center;
+    margin-top: 3.5rem;
+    padding: 0.8rem 0.75rem 0;
+    justify-content: flex-end;
   }
 
   .navbar-search__inner {
-    margin: 0 auto;
+    margin-left: auto;
   }
 
   .site-search--compact {
-    width: 80%;
-    max-width: 420px;
+    width: 70vw;
+    max-width: 240px;
+  }
+
+  .wrapper.list-page .header {
+    margin-top: 4rem;
   }
 
   .search-result__top {
