--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -43,9 +43,10 @@
 
     {{- if or .Params.math .Site.Params.math }}{{ partial "helpers/katex.html" . -}}{{- end -}}
 
-    {{/* Google analytics script. See hugo.toml to enable/disable this. */}}
-    {{- if hugo.IsProduction | or (eq site.Params.env "production") }}
-    {{ template "_internal/google_analytics.html" . }}
+    {{/* Google Analytics (front matter no_ga 지원) */}}
+    {{- $isProd := or (hugo.IsProduction) (eq site.Params.env "production") -}}
+    {{- if and $isProd (not .Params.no_ga) }}
+      {{ template "_internal/google_analytics.html" . }}
     {{- end -}}
 
     {{/* Extend head with user supplied partial */}}
@@ -53,9 +54,10 @@
       {{ partial "custom-head.html" . }}
     {{ end }}
 
-    {{ with .Site.Params.analytics }}
-      {{ with .google }}
-        {{ with .measurementId }}
+    {{ if and (not .Params.no_ga) (.Site.Params.analytics) }}
+      {{ with .Site.Params.analytics }}
+        {{ with .google }}
+          {{ with .measurementId }}
           <!-- Google tag (gtag.js) -->
           <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
           <script>
@@ -65,6 +67,7 @@
 
             gtag('config', '{{ . }}');
           </script>
+          {{ end }}
         {{ end }}
       {{ end }}
     {{ end }}
