숏코드 수정

--- a/layouts/shortcodes/build_time.html
+++ b/layouts/shortcodes/build_time.html
@@ -1,3 +1,1 @@
-{{ with site.Data.built_at }}
-<p>빌드 시각: {{ . | time.Format "2006-01-02 15:04:05" }}</p>
-{{ end }}
+<p>빌드 시각: {{ .Site.BuildDate.Format "2006-01-02 15:04:05" }}</p>
